--- a/progress.html
+++ b/progress.html
@@ -53,32 +53,33 @@
 <h2> Progress </h2>
 <!-- Change value and max after finishing the table of contents for each module -->
 Software Engineering <br>
-<progress id="se" value="11" max="18"></progress> <span id="ses"></span> <br><br>
+<progress class="module" value="12" max="18"></progress> <span class="percentage"></span> <br><br>
 
 Computational Vision <br>
-<progress value="13" max="13"></progress> DONE<br><br>
+<progress class="module" value="13" max="13"></progress> <span class="percentage"></span> <br><br>
 
 Models of Computation (<a href="#" onclick="if(document.getElementById('modelstopics').style.display==='none') {document.getElementById('modelstopics').style.display=''; this.innerHTML='Hide';} else {document.getElementById('modelstopics').style.display='none'; this.innerHTML='Topic list'}">Topic list</a>) <br>
-<progress value="7" max="31"></progress> 7/31<br><br>
+
+<progress class="module" value="7" max="31"></progress> <span class="percentage"></span> <br><br>
 <div id="modelstopics" style="display: none;"> <img src="images/models/topiclist.JPG"/> </div>
 
 Introductory Databases <br>
-<progress id="db" value="11" max="11"></progress> <span id="dbs"></span><br><br>
+<progress class="module" value="11" max="11"></progress> <span class="percentage"></span> <br><br>
 
 Professional Computing <br>
-<progress id="pc" value="100" max="100"></progress> <span id="pcs"></span><br><br>
+<progress class="module" value="100" max="100"></progress> <span class="percentage"></span> <br><br>
 
 Computer Systems and Architecture <br>
-<progress value="0" max="100"></progress> 0/100<br><br>
+<progress class="module" value="0" max="100"></progress> <span class="percentage"></span> <br><br>
 
 C/C++ <br>
-<progress value="15" max="100"></progress> 15/100<br><br>
+<progress class="module" value="15" max="100"></progress> <span class="percentage"></span> <br><br>
 
 Graphics <br>
-<progress value="0" max="100"></progress> 0/100<br><br>
+<progress class="module" value="0" max="100"></progress> <span class="percentage"></span> <br><br>
 
 Math Techniques (<a href="#" onclick="if(document.getElementById('math').style.display==='none') {document.getElementById('math').style.display=''; this.innerHTML='Hide';} else {document.getElementById('math').style.display='none'; this.innerHTML='Topic list'}">Topic list</a>)<br>
-<progress value="0" max="16"></progress> 0/16 <br><br>
+<progress class="module" value="0" max="16"></progress> <span class="percentage"></span> <br><br>
 <div id="math" style="display: none;">
     <h4> Mathematical Techniques for Computer Science Topics </h4>
     <ol>
@@ -101,33 +102,26 @@ Math Techniques (<a href="#" onclick="if(document.getElementById('math').style.d
 </div>
 
 Computer Security <br>
-<progress value="15" max="16"></progress> 15/16 <br><br>
+<progress class="module" value="15" max="16"></progress> <span class="percentage"></span> <br><br>
 
 Natural Language Processing <br>
-<progress value="15" max="100"></progress> 15/100<br><br>
+<progress class="module" value="15" max="100"></progress> <span class="percentage"></span> <br><br>
 
 <!-- Utils -->
 <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
 <script>
-    // Writes the progress for Software Engineering
-    var seValue = document.getElementById('se').getAttribute('value');
-    var seMax = document.getElementById('se').getAttribute('max');
-    document.getElementById('ses').innerHTML = getStatus(seValue,seMax);
-
-    // Writes the progress for Database
-    var dbValue = document.getElementById('db').getAttribute('value');
-    var dbMax = document.getElementById('db').getAttribute('max');
-    document.getElementById('dbs').innerHTML = getStatus(dbValue,dbMax);
-
-    // Writes the progress for Professional Computing
-    var pcValue = document.getElementById('pc').getAttribute('value');
-    var pcMax = document.getElementById('pc').getAttribute('max');
-    document.getElementById('pcs').innerHTML = getStatus(pcValue,pcMax);
-    //document.getElementById('pcs').innerHTML = getPercentage(pcValue, pcMax) + "%";
+    // Function to update all progress strings.
+    var modules = document.getElementsByClassName("module");
+    var percentages = document.getElementsByClassName("percentage");
+    for (var i = 0; i < modules.length; i++){
+        var value = modules[i].getAttribute('value');
+        var max = modules[i].getAttribute('max');
+        percentages[i].innerHTML = getStatus(value,max);
+    }
 
     // Function to return the status value. Prints DONE when completed, else the fraction.
     function getStatus(top, bottom) {
-        return (top===bottom ? "DONE" : top + "/" + bottom);
+        return (top===bottom ? "<strong>DONE</strong>" : top + "/" + bottom);
     }
 
     // When the user scrolls down 20px from the top of the document, show the button
