--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <td class="kk" style="display: none" align="center"> - </td>
             <td class="rb" style="display: none" align="center"> - </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> - </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
         </tr>
@@ -140,7 +140,7 @@
             <td class="kk" style="display: none" align="center"> - </td>
             <td class="rb" style="display: none" align="center"> - </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> - </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
@@ -155,7 +155,7 @@
             <td class="kk" style="display: none" align="center"> 84 </td>
             <td class="rb" style="display: none" align="center"> 28 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 78 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
         </tr>
@@ -170,7 +170,7 @@
             <td class="kk" style="display: none" align="center"> 156 </td>
             <td class="rb" style="display: none" align="center"> 97 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 149 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
         </tr>
@@ -189,7 +189,7 @@
             <td class="kk" style="display: none" align="center"> 87 </td>
             <td class="rb" style="display: none" align="center"> 28 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 80 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
         </tr>
@@ -204,7 +204,7 @@
             <td class="kk" style="display: none" align="center"> 279 </td>
             <td class="rb" style="display: none" align="center"> 223 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 272 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
         </tr>
@@ -219,7 +219,7 @@
             <td class="kk" style="display: none" align="center"> 22 </td>
             <td class="rb" style="display: none" align="center"> 11 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 18 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
         </tr>
@@ -234,7 +234,7 @@
             <td class="kk" style="display: none" align="center"> 32 </td>
             <td class="rb" style="display: none" align="center"> 12 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 20 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
         </tr>
@@ -242,14 +242,14 @@
             <td> Wednesday </td>
             <td> 24/05/2017 </td>
             <td align="center"> 09:30 </td>
-            <td> <a href="maths.html"> LI Math Techniques for Comp Sc </a> </td>
+            <td> <a href="Maths-CourseNotes.pdf"> LI Math Techniques for Comp Sc (PDF) </a> </td>
             <td> New Gym </td>
             <td class="rr" style="display: none" align="center"> 197 </td>
             <td class="sr" style="display: none" align="center"> 92 </td>
             <td class="kk" style="display: none" align="center"> 152 </td>
             <td class="rb" style="display: none" align="center"> 98 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 145 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
         </tr>
@@ -264,7 +264,7 @@
             <td class="kk" style="display: none" align="center"> 168 </td>
             <td class="rb" style="display: none" align="center"> 119 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 162 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
         </tr>
@@ -279,7 +279,7 @@
             <td class="kk" style="display: none" align="center"> 41 </td>
             <td class="rb" style="display: none" align="center"> 14 </td>
             <td class="ab" style="display: none" align="center"> N/A </td>
-            <td class="hh" style="display: none" align="center"> N/A </td>
+            <td class="hh" style="display: none" align="center"> 37 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="nlp"></p> </td>
         </tr>
